<resources>

    <string name="app_name">ChangAnTong</string>
    <string name="font_oem1">fonts/oem1.ttf</string>
    <string name="font_oem2">fonts/oem2.ttf</string>
    <string name="font_oem3">fonts/oem3.ttf</string>
    <string name="spec_prop_id">Application</string>
    <string name="spec_prop_serial">Serial:\u0020</string>
    <string name="spec_prop_param">Parameter:\u0020</string>
    <string name="spec_prop_version">Version:\u0020</string>
    <string name="spec_prop_date">Validity:\u0020</string>
    <string name="spec_prop_currency">Currency:\u0020</string>
    <string name="spec_prop_count">Transactions:\u0020</string>
    <string name="spec_prop_ecash">E-Cash:\u0020</string>
    <string name="spec_prop_balance">Balance:\u0020</string>
    <string name="spec_prop_tlimit">EC Single Transaction Limit:\u0020</string>
    <string name="spec_prop_dlimit">EC Balance Limit:\u0020</string>
    <string name="spec_prop_translog">Transaction Logs:</string>
    <string name="spec_prop_access">Access denied</string>
    <string name="spec_prop_exception">Error:</string>
    <string name="spec_cur_unknown"></string>
    <string name="spec_cur_usd">USD</string>
    <string name="spec_cur_cny">CNY</string>
    <string name="spec_cur_hkd">HKD</string>
    <string name="spec_app_unknown">Unknown Application</string>
    <string name="spec_app_shenzhentong">Shenzhen Tong</string>
    <string name="spec_app_quickpass">QuickPass (China UnionPay)</string>
    <string name="spec_app_octopus_hk">Octopus Card (Hong Kong)</string>
    <string name="spec_app_changantong">Changan Tong</string>
    <string name="spec_app_dongguantong">Dongguan Tong</string>
    <string name="spec_app_wuhantong">Wuhan City Smart Card</string>
    <string name="spec_app_beijing">Beijing Municipal Card</string>
    <string name="spec_app_shanghai">Shanghai Card</string>
    <string name="spec_app_debit">Debit Card</string>
    <string name="spec_app_credit">Credit Card</string>
    <string name="spec_app_qcredit">Quasi-credit cards</string>
    <string name="info_nfc_notsupport">
<![CDATA[
    <t_tip>No NFC hardware found, NFcard will NOT work.</t_tip>
    ]]>
    </string>
    <string name="info_nfc_disabled">
<![CDATA[   
    <t_tip>NFC hardware has been disabled, Please enable it first. <br /><br />Touch<b> <t_action_nfc>HERE</b></t_action_nfc> to turn it on.</t_tip>
    ]]>
    </string>
    <string name="info_nfc_nocard">
<![CDATA[
    <t_tip>No card has been read, Please take the card near to the back cover of phone and try again.</t_tip>    
    ]]>
    </string>
    <string name="info_nfc_error">
<![CDATA[
    <t_tip>
    <b>Error occurred when reading card.</b><br />    
    When reading card, Please take your card close to the NFC antenna of phone (Normally, It is at back cover of the phone) and hold a few seconds so that program can read data out. If fails too much, you can try turn off then on NFC and read agian.<br />
	</t_tip>
    ]]>
    </string>
    <string name="info_nfc_unknown">
<![CDATA[
    <t_tip><b>Unknown card.</b> <br />Touch <t_action_help><b>HERE</b></t_action_help> to see currently supported cards.</t_tip>
    ]]>
    </string>
    <string name="info_main_copied">Card information has been copied to clipboard</string>
    <string name="info_main_about">
<![CDATA[
	<div><t_head1><app /></t_head1> <version />
	<br /><t_splitter><br />
	<br />This App can read contactless IC card use NFC hadware.<br />
	<br />It can read account balance and transaction logs from these cards if no read restriction.<br />
	<br />So far we\'ve confirmed the following can be read: Changan Card of Shaanxi,Xi\'an,Shenzhen Tong (newer version) of Shenzhen, Shanghai Card, Octopus Card of Hongkong, Beijing Municipal Card (newer version),  Dongguan Tong, Wuhan City Smart Card, Quickpass (China UnionPay).<br />
	<br /></div>
	]]>
    </string>
    <string name="login">登&#160;&#160;录</string>
    <string name="name">账&#160;&#160;号：</string>
    <string name="password">密&#160;&#160;码：</string>
    <string name="password2">再次输入密码：</string>
    <string name="title_login">登录</string>
    <string name="title_register">注册</string>
    <string name="register">注&#160;&#160;册</string>
    <string name="email">邮&#160;&#160;箱：</string>
    <string name="record_password">记住密码</string>
    <string name="title">西安一卡通</string>
    <string name="mine">我的</string>
    <string name="more">更多</string>
    <string name="more_message">消息推送</string>
    <string name="more_message_note">接收最新消息</string>
    <string name="more_idea">意见反馈</string>
    <string name="more_idea_note">提出对这款软件的意见及建议</string>
    <string name="more_empty">清除缓存</string>
    <string name="more_empty_note">删除一些本地数据</string>
    <string name="idea_activity_hint">请填写联系方式，便于我们联系您</string>
    <string name="idea_activity_contact">联系方式：</string>
    <string name="idea_activity_num">手机号/QQ号/邮箱</string>
    <string name="idea_activity_feedback">请输入意见</string>
    <string name="idea_text">请填写您的宝贵意见,我们期待您的意见和建议.</string>
    <string name="idea_activty_send">发&#160;&#160;送</string>
    <string name="more_regarding">关于</string>
    <string name="more_update">版本更新</string>
    <string name="num">100%</string>
    <string name="cancel">取消更新</string>
    <string name="update">后台更新</string>
    <string name="yet_version">已经是最新版本</string>
    <string name="version">当前版本：1.33\n最新版本：1.34</string>
    <string name="check">正在检查更新…</string>
    <string name="next">下次更新</string>
    <string name="immediately">马上更新</string>
    <string name="notification">正在下载</string>
    <string name="notification_text">正在下载…</string>
    <string name="ip">http://192.168.1.14:8888/</string>
    <string name="io_exception">网络访问出错</string>
    <string name="failure">网络请求失败</string>
    <string name="find">找回密码</string>
    <string name="submit">提&#160;&#160;交</string>
    <string name="win">密码修改成功！</string>
    <string name="defeat">密码修改失败！</string>
    <string name="get_back">返回</string>

</resources>