<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include layout="@layout/top_bar" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <RelativeLayout
                android:id="@+id/message"
                style="@style/more_fragment_item_bg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:tag="message" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/more_message"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/more_message_note"
                        android:textSize="@dimen/font_content" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/ic_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/on" />
            </RelativeLayout>

            <include layout="@layout/line" />

            <RelativeLayout
                style="@style/more_fragment_item_bg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="idea" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/more_idea"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/more_idea_note"
                        android:textSize="@dimen/font_content" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/orientation" />
            </RelativeLayout>

            <include layout="@layout/line" />

            <RelativeLayout
                style="@style/more_fragment_item_bg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="regarding" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/more_regarding"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_title" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/orientation" />
            </RelativeLayout>

            <include layout="@layout/line" />

            <RelativeLayout
                style="@style/more_fragment_item_bg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:onClick="update" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:text="@string/more_update"
                    android:textColor="@color/black"
                    android:textSize="@dimen/font_title" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/orientation" />
            </RelativeLayout>

            <include layout="@layout/line" />

            <RelativeLayout
                android:id="@+id/empty"
                style="@style/more_fragment_item_bg"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/more_empty"
                        android:textColor="@color/black"
                        android:textSize="@dimen/font_title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/more_empty_note"
                        android:textSize="@dimen/font_content" />
                </LinearLayout>

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/down" />

                <com.seedsoft.ykt.widget.LoopProgressBar
                    android:id="@+id/empty_progress_bar"
                    android:layout_width="fill_parent"
                    android:layout_height="3dp"
                    android:layout_marginTop="47dp" />
            </RelativeLayout>

            <include layout="@layout/line" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>