<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <include layout="@layout/top_bar" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/layout_10dp" >

        <EditText
            android:id="@+id/name"
            style="@style/input_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_5dp"
            android:layout_marginStart="@dimen/layout_5dp"
            android:text="@string/name"
            android:textSize="@dimen/font_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/layout_10dp"
        android:paddingLeft="@dimen/layout_10dp"
        android:paddingRight="@dimen/layout_10dp" >

        <EditText
            android:id="@+id/email"
            style="@style/input_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_5dp"
            android:layout_marginStart="@dimen/layout_5dp"
            android:text="@string/email"
            android:textSize="@dimen/font_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/layout_10dp"
        android:paddingLeft="@dimen/layout_10dp"
        android:paddingRight="@dimen/layout_10dp" >

        <EditText
            android:id="@+id/password"
            style="@style/input_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_5dp"
            android:layout_marginStart="@dimen/layout_5dp"
            android:text="@string/password"
            android:textSize="@dimen/font_content" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/layout_10dp"
        android:paddingRight="@dimen/layout_10dp" >

        <EditText
            android:id="@+id/password2"
            style="@style/input_password_style"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/layout_5dp"
            android:layout_marginStart="@dimen/layout_5dp"
            android:text="@string/password2"
            android:textSize="@dimen/font_content" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical"
        android:paddingLeft="@dimen/layout_10dp"
        android:paddingRight="@dimen/layout_10dp" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_back"
            android:clickable="true"
            android:gravity="center"
            android:onClick="submit"
            android:padding="8dp"
            android:text="@string/register"
            android:textSize="@dimen/font_title" />

        <com.seedsoft.ykt.widget.LoopProgressBar
            android:id="@+id/login_progress_bar"
            android:layout_width="fill_parent"
            android:layout_height="3dp"
            android:layout_marginTop="@dimen/layout_5dp" />
    </LinearLayout>

</LinearLayout>